Bug 1345251 Make MozPromise usable on worker threads. r=gerald